# TargetGeneratorV2

./: Cargo.toml  LICENSE  README.md
objects/: objects.json
src/: cli_management.rs  main.rs
src/backgrounds/: background_loader.rs  mod.rs
src/generator/: config.rs  error.rs  mod.rs  target_generator.rs  text.rs  util.rs
src/generator/coco/: mod.rs
src/objects/: mod.rs
src/shapes/: shapes.rs
targetgen-lib/: Cargo.toml
targetgen-lib/src/: lib.rs
targetgen-lib/src/backgrounds/: mod.rs
targetgen-lib/src/generator/: config.rs  error.rs  mod.rs  util.rs
targetgen-lib/src/generator/coco/: mod.rs
