[package]
name = "target-generatorv2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.8"
anyhow = "1.0.79"
rayon = {version = "1.8.1", features = []}
clap = {version = "4.4.18", features = ["default"]}
simple_logger = "4.3.3"
log = "0.4.20"
rand = {version = "0.8.5", features = ["default"]}
imageproc = "0.23.0"
rusttype = "0.9.3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
opt-level = 3 # Maximum optimization
overflow-checks = true   # Enables runtime integer overflow checks.
lto = true
panic = 'unwind'
incremental = true
codegen-units = 16

[term]
quiet = false          # whether cargo output is quiet
verbose = false        # whether cargo provides verbose output
color = 'auto'         # whether cargo colorizes output
hyperlinks = true      # whether cargo inserts links into output
progress.when = 'auto' # whether cargo shows progress bar
progress.width = 80    # width of progress bar