[package]
name = "target-generatorv2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.25.4"
anyhow = "1.0.92"
thiserror = "1.0.67"
rayon = {version = "1.10.0", features = []}
clap = {version = "4.5.20", features = ["default"]}
simple_logger = "5.0.0"
log = "0.4.22"
rand = {version = "0.8.5", features = ["default"]}
imageproc = "0.25.0"
serde = {version = "1.0.210", features = ["derive"]}
serde_json = "1.0.68"
strum = {version = "0.26.3", features = ["derive"]}
chrono = "0.4.38"
moka = {version = "0.12.8", features = ["default", "sync"] }
imagequant = {version = "4.3.3", features = ["default"]}

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
opt-level = 3 # Maximum optimization
overflow-checks = true   # Enables runtime integer overflow checks.
lto = true
panic = 'unwind'
incremental = true
codegen-units = 16

[term]
quiet = false          # whether cargo output is quiet
verbose = false        # whether cargo provides verbose output
color = 'auto'         # whether cargo colorizes output
hyperlinks = true      # whether cargo inserts links into output
progress.when = 'auto' # whether cargo shows progress bar
progress.width = 80    # width of progress bar